--- a/index.html
+++ b/index.html
@@ -3,19 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Mateus - Professor e Entusiasta</title>
 </head>
 <body>
-    <h1>Apresentação</h1>
-Eu sou Mateus, professor de Geografia e Pensamento Computacional no colégo Romário Martins em Piraquara. </p>
- Sou um amante da natureza e colecionador de jogos de tabuleiro.
+    <header>
+        <h1>Apresentação</h1>
+    </header>
 
- <h1>Minhas habilidades</h1>
-<ul>
-        <li> HTML</li>
-        <li> CSS</li>
-        <li> Javascript</li>
-        <li> Python</li>
-    </ul>
+    <main>
+        <section>
+            <p>Eu sou Mateus, professor de Geografia e Pensamento Computacional no colégio Romário Martins em Piraquara.</p>
+            <p>Sou um amante da natureza e colecionador de jogos de tabuleiro.</p>
+        </section>
+
+        <section>
+            <h2>Minhas Habilidades</h2>
+            <ul>
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>JavaScript</li>
+                <li>Python</li>
+            </ul>
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2023 Mateus. Todos os direitos reservados.</p>
+    </footer>
 </body>
 </html>
