--- a/index.html
+++ b/index.html
@@ -3,32 +3,58 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Mateus - Professor e Entusiasta</title>
 </head>
 <body>
     <header>
         <h1>Apresentação</h1>
+        <img src="Imagem/Captura de tela 2025-10-22 100858.png" alt="Foto Prof Mateus" width="600">
     </header>
 
     <main>
+            <h2>Meus projetos</h2>
+            <section> 
+            <div>
+<img src="./Imagem/projeto-1.png">              
+                <h3>Projeto 1</h3>
+                <p>descrição do projeto</p>
+                <a href="#">Veja o projeto</a>
+            </div>
+            <div>
+              <img src="./Imagem/projeto-2.png">    
+                <h3>Projeto 2</h3>
+                <p>descrição do projeto</p>
+                <a href="#">Veja o projeto</a>
+            </div>
+        </section>
+
         <section>
-            <p>Eu sou Mateus, professor de Geografia e Pensamento Computacional no colégio Romário Martins em Piraquara.</p>
-            <p>Sou um amante da natureza e colecionador de jogos de tabuleiro.</p>
+            <h2>Eu</h2>
+            <section>
+                <p>Eu sou Mateus, professor de Geografia e Pensamento Computacional no colégio Romário Martins em Piraquara.</p>
+                <p>Sou um amante da natureza e colecionador de jogos de tabuleiro.</p>
+            </section>
         </section>
 
         <section>
             <h2>Minhas Habilidades</h2>
             <ul>
-                <li>HTML</li>
-                <li>CSS</li>
-                <li>JavaScript</li>
-                <li>Python</li>
+                <li><span>HTML</span></li>
+                <li><span>CSS</span></li>
+                <li><span>JavaScript</span></li>
+                <li><span>Python</span></li>
             </ul>
         </section>
     </main>
 
     <footer>
-        <p>&copy; 2025 Mateus. Todos os direitos reservados.</p>
+        <h2>Entre em contato</h2>
+        <a href="https://github.com/">GitHub</a>
+        <p>Produzido por Professor Mateus</p>
     </footer>
+    <script src="script.js"></script>
+    <h1> Oi, <b id="texto">Fulano</b>, eu ensino Programação.</h1>
+
 </body>
 </html>
